# au-job-migration-project

./: .env.example  .gitignore  LICENSE  README.md  dev_log.txt  migration-job-dashboard-plan.md  pyproject.toml  开发日志.txt
adzuna_pipeline/: __init__.py  client.py  config.py  loader.py  storage.py
adzuna_pipeline/extraction/: __init__.py  batch.py  client.py  judge.py  prompts.py  schema.py
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: dim_occupation.sql  fct_local_experience_barrier.sql  fct_occupation_supply_demand_30d.sql  fct_skills_demand.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_adzuna__jobs.sql  stg_eoi.sql  stg_occupation_lists.sql
dbt/seeds/: README.md  anzsco_title_patterns.csv  eoi_invitations.csv  occupation_ceilings.csv  occupation_lists.csv
dbt/tests/: extraction_coverage_at_least_90pct.sql
docs/: gcp-setup-guide.md  powerbi-theme.json
scripts/: day0_verify_adzuna.py  evaluate_extraction.py  extract_llm_signals.py  ingest_adzuna.py  test_gcp.py  verify_adzuna_source.py
scripts/verify/: day5_marts_check.py  day5_marts_check.sql
