[project]
name = "au-job-radar"
version = "0.1.0"
description = "Analytics pipeline for the Australian skilled-migration job market."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sunmao Wang", email = "sunmaow1715@gmail.com" },
]
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "google-auth>=2.32.0",
    "db-dtypes>=1.2.0",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "dashscope>=1.20.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.8.0",
    "dbt-bigquery>=1.8.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.5",
]

[project.scripts]
verify-adzuna = "scripts.verify_adzuna_source:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adzuna_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
